--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "firebase": "^12.6.0",
     "howler": "^2.2.4",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sass": "^1.94.1"
   },
   "devDependencies": {
